--- a/_sass/ds100.scss
+++ b/_sass/ds100.scss
@@ -34,8 +34,7 @@
 $content-max-width: 900px;
 $tablet-up: 45rem;
 
-//$data-blue: #003A70;
-$data-blue: #8C1515;
+$data-blue: #003A70;
 $bg-color: #f6f6f6;
 $text-color: #111;
 
